--- a/contato.html
+++ b/contato.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="assets/header.ico" type="image/x-icon" />
     <title>Contato</title>
   </head>
   <body>
