--- a/equipe.html
+++ b/equipe.html
@@ -12,24 +12,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="assets/header.ico" type="image/x-icon" />
     <title>Equipe</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <div class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#historia">História</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#equipe">Equipe</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
     <main class="container mt-4">
       <section id="historia" class="py-5 bg-">
         <div class="container">
