--- a/galeria.html
+++ b/galeria.html
@@ -13,19 +13,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="icon" href="assets/header.ico" type="image/x-icon" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <div class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#galeria">Nosso Ambiente</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
     <main class="container mt-4">
       <section id="galeria" class="py-5 historia-empresa">
         <h1 class="display-4 text-center mb-4">Nosso Ambiente</h1>
