--- a/header.html
+++ b/header.html
@@ -1,9 +1,11 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" style="color: white; font-size: 1.5rem"
-        >Santa Pizza</a
-      >
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="assets/santapizza.png" alt="Santa Pizza Logo" width="40" height="40" class="me-2" />
+        <span style="color: white; font-size: 1.5rem">Santa Pizza</span>
+      </a>
+      
       <button
         class="navbar-toggler"
         type="button"
