--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="icon" href="assets/header.ico" type="image/x-icon" />
     <title>Pizzaria - Santa Pizza Presidente Prudente</title>
   </head>
   <body>
