--- a/servicos.html
+++ b/servicos.html
@@ -12,21 +12,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="icon" href="assets/header.ico" type="image/x-icon" />
     <title>Serviços</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <div class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#servicos">Nossos Serviços</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
     <main class="container mt-4">
       <section id="servicos" class="py-5 bg-dark text-white">
         <div class="container text-center">
